# vulkan_demo_test

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  build_android_apk.bat  build_android_cli.bat  build_only.bat  setup_deps.py  stdout.txt  validation_analyze.md  vulkan_demo_test设计说明书.txt
android/: CMakeLists.txt  android_app.cpp  android_platform.cpp  android_platform.h  build_apk.bat  build_cli.bat
android/apk/: release-key.jks  settings.gradle.kts
android/apk/app/: build.gradle.kts
android/apk/app/src/main/: AndroidManifest.xml
android/apk/app/src/main/assets/shaders/multi_pass_blend/: blend.frag.spv  blend.vert  blend.vert.spv  blue_triangle.frag  blue_triangle.frag.spv  gradient.comp  gradient.comp.spv
android/apk/app/src/main/java/com/vulkandemo/: DemoActivity.kt  MainActivity.kt  VulkanDemo.kt
android/apk/app/src/main/res/layout/: activity_main.xml
android/apk/app/src/main/res/values/: strings.xml  themes.xml
jdk/jdk-17.0.2/: release
jdk/jdk-17.0.2/jmods/: com.azul.crs.client.jmod  com.azul.tooling.jmod  java.compiler.jmod  java.datatransfer.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.rmi.jmod  java.scripting.jmod  java.se.jmod  java.security.jgss.jmod  java.security.sasl.jmod  java.smartcardio.jmod  java.sql.jmod  java.sql.rowset.jmod  java.transaction.xa.jmod  java.xml.crypto.jmod  jdk.accessibility.jmod  jdk.attach.jmod  jdk.charsets.jmod  jdk.crypto.cryptoki.jmod  jdk.crypto.ec.jmod  jdk.crypto.mscapi.jmod  jdk.dynalink.jmod  jdk.editpad.jmod  jdk.hotspot.agent.jmod  jdk.httpserver.jmod  jdk.incubator.foreign.jmod  jdk.incubator.vector.jmod  jdk.internal.ed.jmod  jdk.internal.jvmstat.jmod  jdk.internal.le.jmod  jdk.internal.opt.jmod  jdk.internal.vm.ci.jmod  jdk.internal.vm.compiler.jmod  jdk.internal.vm.compiler.management.jmod  (+28 more)
jdk/jdk-17.0.2/lib/: modules
shaders/multi_pass_blend/: blend.frag
src/: app.cpp  app.h  app_android.cpp  main.cpp
src/core/: buffer.cpp  buffer.h  command.cpp  command.h  compute_pipeline.cpp  compute_pipeline.h  descriptor.cpp  descriptor.h  device.cpp  device.h  frame_buffer.cpp  frame_buffer.h  image.cpp  image.h  instance.cpp  instance.h  pipeline.cpp  pipeline.h  pipeline_base.cpp  pipeline_base.h  render_pass.cpp  render_pass.h  render_target.cpp  render_target.h  sampler.cpp  sampler.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  sync.cpp  sync.h
src/demo/: demo_base.h  demo_config.h  demo_registry.cpp  demo_registry.h
src/demo/demos/: CMakeLists.txt
src/demo/demos/multi_pass_blend/: demo_multi_pass_blend.cpp
src/demo/demos/triangle/: demo_triangle.cpp
src/model/: gltf_model.cpp  gltf_model.h  texture_loader.cpp  texture_loader.h
src/offscreen/: offscreen_renderer.cpp  offscreen_renderer.h
src/test/: image_comparator.cpp  image_comparator.h  test_runner.cpp  test_runner.h
src/utils/: args_parser.cpp  args_parser.h  file_utils.cpp  file_utils.h  png_writer.cpp  png_writer.h  validation_logger.h
